src/main/java/com/example/common/error/ErrorMessage.java
package com.example.common.error;

public class ErrorMessage {

    public static final String BOOK_ERROR_001 = "" ;


    public static final String CATEGORY_ERROR_001 = "카테고리명은 필수입력 값입니다." ;


}
